--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "storybreak-front-end",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -9,7 +10,6 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "draft-js": "^0.11.7",
-    "gh-pages": "^3.1.0",
     "https-proxy-agent": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
